--- a/index.html
+++ b/index.html
@@ -90,8 +90,8 @@
             </div>
         </div>
     </div>
-
     <script type="text/javascript" src="pizzas.js"></script>
     <script type="text/javascript" src="script.js"></script>
+    <div class="footer">Desenvolvido por Henrique Lockmann</div>
 </body>
 </html>
