--- a/index.html
+++ b/index.html
@@ -92,6 +92,6 @@
     </div>
     <script type="text/javascript" src="pizzas.js"></script>
     <script type="text/javascript" src="script.js"></script>
-    <div class="footer">Desenvolvido por Henrique Lockmann</div>
+    <div class="footer"><a href="https://henriquelockmann.com.br">Desenvolvido por Henrique Lockmann</a></div>
 </body>
 </html>
